@@ -1,3 +1,9 @@
+2009-07-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* renamed directory "mingw32" to "mingw"
+	scripts adapted
+	new target "mingw" in toplevel Makefile
+
 2009-07-06  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtar.c (avt_draw_balloon): add missing SDL_SetClipRect
